--- a/index-old.html
+++ b/index-old.html
@@ -17,7 +17,7 @@
 <!-- zip functionality -->
 <script src="ext-lib/jszip.js"></script>
 <script src="ext-lib/jszip-load.js"></script>
-<script src="ext-lib\jszip-inflate.js"></script>
+<script src="ext-lib/jszip-inflate.js"></script>
 <!--script src="ext-lib\jszip-deflate.js"></script-->
 <!-- EXPERIMENTAL -->
 <!-- 
