--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 <script src="ext-lib/spin.js"></script>
 <script src="ext-lib/jquery.spin.js"></script>
 <!-- zip functionality -->
-<script src="ext-lib/jszip.js"></script>
+<!--script src="ext-lib/jszip.js"></script>
 <script src="ext-lib/jszip-load.js"></script>
-<script src="ext-lib/jszip-inflate.js"></script>
+<script src="ext-lib/jszip-inflate.js"></script-->
 <!--script src="ext-lib\jszip-deflate.js"></script-->
 
 <script src="lib/jli.js"></script>
