--- a/index.html
+++ b/index.html
@@ -265,6 +265,19 @@
 <script src="lib/scroller.js"></script>
 <script src="lib/keyboard.js"></script>
 
+<!-- CKEDITOR -->
+<script>
+// NOTE: do not remove the next line if the CKEditor not important, or remove 
+//		all references to this in the code...
+var CKEDITOR_ENABLED = false
+</script>
+<script src="ckeditor/ckeditor.js"></script>
+<script>
+CKEDITOR.disableAutoInline = true
+CKEDITOR_ENABLED = true
+</script>
+
+
 <!--script src="lib/log.js"></script-->
 
 <script src="magazine.js"></script>
@@ -377,11 +390,21 @@ function setupEditor(){
 			if(action == 'on'){
 				MagazineScroller.stop()
 				$('[contenteditable]').attr({contenteditable: 'true'})
+				// ckeditor...
+				if(CKEDITOR_ENABLED){
+					CKEDITOR.inlineAll()
+				}
 			} else {
 				$('[contenteditable]')
 					.blur()
 					.attr({contenteditable: 'false'})
 				MagazineScroller.start()
+				// ckeditor...
+				if(CKEDITOR_ENABLED){
+					for( var i in CKEDITOR.instances){
+						CKEDITOR.instances[i].destroy()
+					}
+				}
 			}
 		})
 	
