--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
 	background: white;
 	color: black;
 	border: solid black 5px;
-	border-radius: 50px;
+	border-radius: 50%;
 
-	box-shadow: 2px 2px 7px 0px black;
+	box-shadow: 5px 5px 50px 0px black;
 }
 .editor .current-page-indicator .button:hover {
-	box-shadow: 2px 2px 9px 1px black;
+	box-shadow: 10px 10px 55px 0px black;
 }
 .editor.page-fit-to-viewer .current-page-indicator .button {
 	width: 50px;
 	height: 50px;
 
 	border: solid black 2px;
-	border-radius:25px;
+	/*border-radius:25px;*/
 	font-size: 25px;
 }
 
