--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 	display: block;
 	width: 100%;
 	height: 100%;
+
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+
+	/*
+	border: solid 2px black;
+	*/
+	/*border-radius: 2px;*/
 }
 
 .viewer {
@@ -747,19 +756,20 @@ $(document).ready(function(){
 				</div>
 			</div>
 
-			<div class="page image-fit light">
-				<div class="content" style="background-image: url('landscape.jpg')">
+			<div class="page image-fit dark">
+				<div class="content" style="background-image: url('img.jpg')">
 					<div class="caption hidden" contenteditable="false">
-						<h3>Horizontal image fit to viewer</h3>
+						<h3>Vertical image fit to viewer</h3>
 						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
 					</div>
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
-			<div class="page image-fit dark">
-				<div class="content" style="background-image: url('img.jpg')">
+
+			<div class="page image-fit light">
+				<div class="content" style="background-image: url('landscape.jpg')">
 					<div class="caption hidden" contenteditable="false">
-						<h3>Vertical image fit to viewer</h3>
+						<h3>Horizontal image fit to viewer</h3>
 						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
 					</div>
 					<div class="page-number-text">[PAGE NUMBER]</div>
