--- a/templates.html
+++ b/templates.html
@@ -242,6 +242,10 @@ function addColumnToggleZones(){
 
 $(function(){
 
+	$('.page.image-fit, .page.image-fit-height')
+		.width(800)
+		.height(600)
+
 	addThemeToggleZones()
 	addColumnToggleZones()
 	addPreviewToggleZones()
@@ -338,6 +342,34 @@ $(function(){
 		<div class="title">Caption</div>
 	</div>
 
+	<div class="page-box">
+		<div class="page image-fit">
+			<div class="content" style="background-image: url('landscape.jpg')">
+				<div class="caption hidden" contenteditable="false">
+					<h3>Horizontal image fit to viewer</h3>
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
+				</div>
+				<div class="page-number-text">[PAGE NUMBER]</div>
+			</div>
+		</div>
+		<!-- keep this last -->
+		<div class="title">Image (fit)</div>
+	</div>
+
+	<div class="page-box">
+		<div class="page image-fit-height">
+			<div class="content">
+				<img src="img.jpg">
+				<div class="caption hidden" contenteditable="false">
+					<h3>Image fit to height</h3>
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Nam liber tempor cum soluta nobis eleifend option congue nihil imperdiet doming id quod mazim placerat facer possim assum. Typi non habent claritatem insitam; est usus legentis in iis qui facit eorum claritatem. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius.
+				</div>
+				<div class="page-number-text">[PAGE NUMBER]</div>
+			</div>
+		</div>
+		<!-- keep this last -->
+		<div class="title">Image (fit height)</div>
+	</div>
 
 	<div class="page-box">
 		<div class="page">
