moved css files to css folder, starting to get crowded here...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 
-<link rel="stylesheet" href="magazine.css">
-<link rel="stylesheet" href="gear.css">
-<link rel="stylesheet" href="magazine-themes.css">
-<link rel="stylesheet" href="magazine-custom.css">
-<link rel="stylesheet" href="magazine-editor.css">
+<link rel="stylesheet" href="css/magazine.css">
+<link rel="stylesheet" href="css/gear.css">
+<link rel="stylesheet" href="css/magazine-themes.css">
+<link rel="stylesheet" href="css/magazine-custom.css">
+<link rel="stylesheet" href="css/magazine-editor.css">
 <style>
 
 .chrome {
