fixed the tab scroll issue...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@ var keyboard_config = {
 			default: nextPage,
 			shift: prevPage	
 		},
+		Tab: 'Space',
 		Enter: function(){ togglePageView('on') },
 		// combined navigation with actions..
 		Up: function(){ togglePageView() },
