added templates.js -- still not if it's the right way to go...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ CKEDITOR.disableAutoInline = true
 <script src="layout.js"></script>
 <script src="navigator.js"></script>
 <script src="editor.js"></script>
+<script src="templates.js"></script>
 
 <script src="platform.js"></script>
 
