--- a/index.html
+++ b/index.html
@@ -308,10 +308,10 @@ var KEYBOARD_CONFIG = {
 				showInOverlay('<h1>Controls</h1>'+
 					'<p>NOTE: this section is a stub.<p>'+
 					'<table width="100%">'+
-						'<tr><td align="right" width="45%"> C-O </td><td> Load issue from file. </td></tr>'+
-						'<tr><td align="right"> C-S </td><td> Save issue to file. </td></tr>'+
-						'<tr><td align="right"> - / + </td><td> Zoom out/in. </td></tr>'+
-						'<tr><td align="right"> 0 </td><td> Set default zoom level. </td></tr>'+
+						'<tr><td align="right" width="45%"><b> C-O </b></td><td> Load issue from file. </td></tr>'+
+						'<tr><td align="right"><b> C-S </b></td><td> Save issue to file. </td></tr>'+
+						'<tr><td align="right"><b> - / + </b></td><td> Zoom out/in. </td></tr>'+
+						'<tr><td align="right"><b> 0 </b></td><td> Set default zoom level. </td></tr>'+
 					'</table>')
 			},
 	},
