updated todo and fixed templates.html...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/templates.html
+++ b/templates.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 
-<link rel="stylesheet" href="magazine.css">
-<link rel="stylesheet" href="magazine-themes.css">
-<link rel="stylesheet" href="magazine-custom.css">
+<link rel="stylesheet" href="css/magazine.css">
+<link rel="stylesheet" href="css/magazine-themes.css">
+<link rel="stylesheet" href="css/magazine-custom.css">
 
 <style>
 body {
