--- a/index-old.html
+++ b/index-old.html
@@ -5,9 +5,10 @@
 <title>PortableMag</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-<link rel="stylesheet" href="magazine.css">
-<link rel="stylesheet" href="magazine-themes.css">
-<link rel="stylesheet" href="magazine-custom.css">
+<link rel="stylesheet" href="css/magazine.css">
+<link rel="stylesheet" href="css/magazine-themes.css">
+<link rel="stylesheet" href="css/magazine-custom.css">
+<link rel="stylesheet" href="css/magazine-editor.css">
 
 <script src="ext-lib/jquery.js"></script>
 <script src="ext-lib/jquery.touchSwipe.js"></script>
@@ -27,6 +28,7 @@ XXX scrollTo is a cool and a powerfull tool but it needs a sustantial code reorg
 <!--script src="ext-lib/jquery.scrollto.js"></script-->
 
 <script src="lib/jli.js"></script>
+<script src="lib/keyboard.js"></script>
 
 <script src="magazine.js"></script>
 <script src="navigator.js"></script>
@@ -205,7 +207,7 @@ $(document).ready(function(){
 
 	<!-- Toolbars -->
 
-	<div class="left-toolbar">
+	<!--div class="left-toolbar">
 
 		<svg id="new-magazine" width="40" height="40" xmlns="http://www.w3.org/2000/svg">
 		 <g>
@@ -325,7 +327,7 @@ $(document).ready(function(){
 			</svg>
 		</div>
 
-	</div>
+	</div-->
 
 
 	<div class="top-toolbar">
