started project revival -- updated keyboard.js and split out the bindings...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -110,6 +110,9 @@ CKEDITOR.disableAutoInline = true
 
 <script src="platform.js"></script>
 
+<!-- XXX load this as early as possible... -->
+<script src="keybindings.js"></script>
+
 <script>
 
 function showInOverlay(text){
@@ -235,144 +238,6 @@ function handleFileSelect(evt) {
 		//reader.readAsText(f)
 	}
 }
-
-
-
-var KEYBOARD_CONFIG = {
-	'.overlay': {
-		title: 'Overlay mode.',
-		doc: '',
-
-		ignore: '*',
-
-		Esc: function(){
-				removeOverlay()
-				return false
-			},
-	},
-
-	'.editor:not(.inline-editor-mode)': {
-		title: 'Editor mode.',
-		doc: '',
-
-		'0': function(){
-				var n = getPageNumber()
-				if(togglePageView('?') == 'on'){
-					setMagazineScale(getPageTargetScale(1))
-				} else {
-					setMagazineScale(getPageTargetScale(PAGES_IN_RIBBON))
-				}
-				setCurrentPage(n)
-			},
-		Esc: '0',
-
-		'=': function(){
-				var n = getPageNumber()
-				setMagazineScale(Math.min(
-						getMagazineScale() * 1.2, 
-						getPageTargetScale(1)))
-				setCurrentPage(n)
-			},
-		'-': function(){
-				var n = getPageNumber()
-				setMagazineScale(Math.max(
-						getMagazineScale() * 0.8, 
-						getPageTargetScale(PAGES_IN_RIBBON*2)))
-				setCurrentPage(n)
-			},
-
-		'O': {
-				// load...
-				// XXX needs testing...
-				'ctrl': function(){
-					showInOverlay('<h1>Open Issue</h1>'+
-						'<input type="file" id="upload" name="file" multiple onchange="handleFileSelect(event)"/>')
-				},
-			},
-		'S': {
-				// save...
-				// XXX needs testing...
-				'ctrl': function(){
-					showInOverlay('<h1>Save Issue</h1>'+
-						'<p>NOTE: this download will not include the actual '+
-						'images. at this point, images should be added manually.</p>'+
-						'<p><a id="data_download" href="#">Download</a></p>')
-
-					// setup the data...
-					$(generateMagazineDownload)
-				},
-			},
-
-		// ?
-		'/': function(){
-				showInOverlay('<h1>Controls</h1>'+
-					'<p>NOTE: this section is a stub.<p>'+
-					'<table width="100%">'+
-						'<tr><td align="right" width="45%"><b> C-O </b></td><td> Load issue from file. </td></tr>'+
-						'<tr><td align="right"><b> C-S </b></td><td> Save issue to file. </td></tr>'+
-						'<tr><td align="right"><b> - / + </b></td><td> Zoom out/in. </td></tr>'+
-						'<tr><td align="right"><b> 0 </b></td><td> Set default zoom level. </td></tr>'+
-					'</table>')
-			},
-	},
-
-	// ignore all keys except Esc here...
-	'.inline-editor-mode': {
-		title: 'Inline editor mode.',
-		doc: '',
-
-		//ignore: '*'
-		Esc: function(){
-				$(':focus').blur()
-				return false
-			},
-	},
-
-	'.chrome:not(.inline-editor-mode)': {
-		title: 'Global bindings.',
-		doc: '',
-
-		Esc: function(){
-				if(toggleEditor('?') == 'on'){
-					toggleEditor('off')
-				} else {
-					togglePageView('off')
-				}
-			},
-
-		Home: firstPage,
-		End: lastPage, 
-		Left: {
-				default: function(){ prevPage() },
-				shift: prevBookmark,
-				ctrl: prevArticle,
-			},
-		Right: {
-				default: function(){ nextPage() },
-				shift: nextBookmark,
-				ctrl: nextArticle,
-			},
-		Space:	{
-				default: 'Right',
-				shift: 'Left'
-			},
-		//Tab: 'Space',
-		Tab: function(){ return false },
-		Enter: function(){ togglePageView('on') },
-		// combined navigation with actions..
-		Up: function(){ togglePageView() },
-		Down: function(){ togglePageView() },
-
-		F: function(){ togglePageFitMode() },
-		B: {
-				default: function(){ toggleBookmark() },
-				ctrl: function(){ toggleThemes() },
-			},
-
-		// XXX this should not be in the production viewer...
-		E: function(){ toggleEditor() },
-	},
-} 
 
 
 $(document).ready(function(){
