--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@ $(document).ready(function(){
 	// XXX this still depends on touchSwipe...
 	//setupNavigator()
 	setCurrentPage(0)
+	loadMagazineChrome()
 
 	toggleThemes('none')
 
