--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@ $(document).ready(function(){
 
 	togglePageView('on')
 	// XXX this still depends on touchSwipe...
-	//setupNavigator()
-	setCurrentPage(0)
+	setupNavigator()
 	loadMagazineChrome()
+	setCurrentPage(0)
 
 	toggleThemes('none')
 
