--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ $(document).ready(function(){
 						</ul>
 					</big>
 					<div style="position:absolute; bottom:10px; right:30px">
-						<span class="dpi">dpi</span><a href="#next">get started...</a><br>
+						<span class="dpi">X</span>dpi <a href="#next">get started...</a><br>
 					</div>
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
