--- a/index.html
+++ b/index.html
@@ -254,8 +254,7 @@ $(document).ready(function(){
 
 	// keyboard...
 	$(document)
-		.keydown(makeKeyboardHandler(KEYBOARD_CONFIG,
-			function(k){console.log(k)}))
+		.keydown(makeKeyboardHandler(KEYBOARD_CONFIG))
 
 	window.MagazineScroller = makeScrollHandler($('.viewer'), {
 		hScroll: true,
